[gd_scene load_steps=31 format=3 uid="uid://bcm3y3dpf3rxw"]

[ext_resource type="Script" uid="uid://cdpy10xis0nel" path="res://Code/side_bar_panel.gd" id="1_fe0ym"]
[ext_resource type="FontFile" uid="uid://dvmia7jpiwn6" path="res://fonts/VT323/VT323-Regular.ttf" id="1_p7t0e"]
[ext_resource type="FontFile" uid="uid://bqt1o48y34t8a" path="res://fonts/Montserrat/static/Montserrat-SemiBold.ttf" id="2_p7t0e"]
[ext_resource type="Texture2D" uid="uid://sich8gwltgyc" path="res://Images/water_price.png" id="4_ekxr6"]
[ext_resource type="Texture2D" uid="uid://c7eyv6ejdueqb" path="res://Images/fumigate_price.png" id="6_o4nnb"]
[ext_resource type="Texture2D" uid="uid://badnpw4nco8q5" path="res://Images/moneda.png" id="7_aixeg"]
[ext_resource type="Texture2D" uid="uid://3t2uyhstpx6c" path="res://Images/BTNharvest.png" id="7_fe0ym"]
[ext_resource type="FontFile" uid="uid://cxhhxpn7hk82p" path="res://fonts/Montserrat/static/Montserrat-ExtraBold.ttf" id="8_fe0ym"]

[sub_resource type="Theme" id="Theme_aixeg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fe0ym"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7t0e"]
content_margin_top = 7.0
content_margin_bottom = 10.0
bg_color = Color(0.654902, 0.8392157, 0.9607843, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4op00"]
content_margin_left = 5.0
bg_color = Color(0.14191586, 0.76307744, 0.86585987, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfsap"]
content_margin_left = 5.0
bg_color = Color(0.98039216, 0.78039217, 0.7647059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxr6"]
bg_color = Color(0.4837253, 0.9560706, 0.43625543, 0.8901961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fe0ym"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o4gmy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7xlr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v20hd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lrjsu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p7t0e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xyrf5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_06l6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dx0p2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_plltf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nve07"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4op00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lqp8s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hyanh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0hqx7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyanh"]
content_margin_right = 5.0
bg_color = Color(0.16078432, 0.2784314, 0.3647059, 1)
corner_radius_top_right = 5
expand_margin_left = 10.0
expand_margin_top = 5.0
expand_margin_right = 8.0
expand_margin_bottom = 5.0

[node name="SideBarPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 147.44315
offset_bottom = 301.0462
scale = Vector2(0.7935262, 0.8997157)
theme = SubResource("Theme_aixeg")
script = ExtResource("1_fe0ym")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 146.0
offset_bottom = 298.82446
theme_override_styles/panel = SubResource("StyleBoxFlat_fe0ym")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -8.13453
offset_top = 9.997844
offset_right = 137.86546
offset_bottom = 278.99783
scale = Vector2(0.8772575, 1.0625669)
pivot_offset = Vector2(135.29553, 115.75762)
theme_override_constants/separation = 1

[node name="Title" type="PanelContainer" parent="MainVBox"]
layout_mode = 2
size_flags_stretch_ratio = 15.8
theme_override_styles/panel = SubResource("StyleBoxFlat_p7t0e")

[node name="Label" type="Label" parent="MainVBox/Title"]
layout_mode = 2
theme_override_colors/font_color = Color(0.18431373, 0.2901961, 0.39607844, 1)
theme_override_fonts/font = ExtResource("1_p7t0e")
theme_override_font_sizes/font_size = 22
text = "DATA SEEDER"
horizontal_alignment = 1

[node name="space3" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TabletPanel" type="Button" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4op00")

[node name="TabletHBox" type="HBoxContainer" parent="MainVBox/TabletPanel"]
layout_mode = 0
offset_left = 5.0
offset_right = 149.0
offset_bottom = 24.0
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="MainVBox/TabletPanel/TabletHBox"]
layout_mode = 2
size_flags_stretch_ratio = 20.0

[node name="Label" type="Label" parent="MainVBox/TabletPanel/TabletHBox"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_colors/font_color = Color(0.22352941, 0.21960784, 0.24313726, 1)
theme_override_fonts/font = ExtResource("2_p7t0e")
text = "Tablet"

[node name="space2" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Button" type="Button" parent="MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.22352941, 0.21960784, 0.24313726, 1)
theme_override_fonts/font = ExtResource("2_p7t0e")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_lfsap")
text = "Shop"
alignment = 0

[node name="space5" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Button2" type="Button" parent="MainVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.22352941, 0.21960784, 0.24313726, 1)
theme_override_fonts/font = ExtResource("2_p7t0e")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_ekxr6")
text = " Manual"
alignment = 0

[node name="space" type="Control" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/margin_left = -14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = -16
theme_override_constants/margin_bottom = -5

[node name="ActionButtonsHBox" type="HBoxContainer" parent="MainVBox/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 11
alignment = 1

[node name="BTNwater" type="Button" parent="MainVBox/MarginContainer/ActionButtonsHBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 55
theme_override_constants/align_to_largest_stylebox = 0
theme_override_constants/line_spacing = 0
theme_override_icons/icon = ExtResource("4_ekxr6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fe0ym")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_o4gmy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u7xlr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_v20hd")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lrjsu")

[node name="BTNharvest" type="Button" parent="MainVBox/MarginContainer/ActionButtonsHBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 35
theme_override_icons/icon = ExtResource("7_fe0ym")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p7t0e")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xyrf5")
theme_override_styles/hover = SubResource("StyleBoxEmpty_06l6u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dx0p2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_plltf")
flat = true

[node name="BTNfumigate" type="Button" parent="MainVBox/MarginContainer/ActionButtonsHBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 55
theme_override_icons/icon = ExtResource("6_o4nnb")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nve07")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4op00")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lqp8s")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hyanh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0hqx7")
flat = true

[node name="space4" type="Control" parent="MainVBox"]
custom_minimum_size = Vector2(10, 15)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = -4
theme_override_constants/margin_bottom = -6

[node name="PanelContainer" type="PanelContainer" parent="MainVBox/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hyanh")

[node name="HBoxContainer" type="HBoxContainer" parent="MainVBox/MarginContainer2/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MainVBox/MarginContainer2/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
texture = ExtResource("7_aixeg")
expand_mode = 3

[node name="IU_price" type="Label" parent="MainVBox/MarginContainer2/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("8_fe0ym")
theme_override_font_sizes/font_size = 16
text = "  $100  "
